// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks for invalid username 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      Your username is an identifier that will appear on all of your comments.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="InputDescription-root"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value="x"
        />
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon MessageIcon-root"
        >
          warning
        </i>
        <span>
          Username must contain at least 3 characters.
        </span>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Username
    </button>
  </div>
</form>
`;

exports[`renders createUsername view 1`] = `
<div
  className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
  id="coral"
>
  <div>
    <div
      data-testid="completeAccountBox"
    >
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter"
      >
        <div
          className="CompleteAccountBox-container"
        >
          <div
            className="CompleteAccountBox-header"
          >
            <div
              className="CompleteAccountBox-heading3"
            >
              Finish Setting Up Your Account
            </div>
            <div
              className="CompleteAccountBox-title"
            >
              <span>
                Create Username
              </span>
            </div>
          </div>
          <div
            className="CompleteAccountBox-main"
          >
            <div>
              <form
                autoComplete="off"
                onSubmit={[Function]}
              >
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
                >
                  <div>
                    Your username is an identifier that will appear on all of your comments.
                  </div>
                  <div
                    className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
                  >
                    <label
                      className="InputLabel-root"
                      htmlFor="username"
                    >
                      Username
                    </label>
                    <div
                      className="InputDescription-root"
                    >
                      You may use “_” and “.” Spaces not permitted.
                    </div>
                    <div
                      className="TextField-root TextField-fullWidth"
                    >
                      <input
                        className="TextField-input TextField-colorRegular"
                        disabled={false}
                        id="username"
                        name="username"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Username"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <button
                    className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
                    data-variant="regular"
                    disabled={false}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="submit"
                  >
                    Create Username
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows error when submitting empty form 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      Your username is an identifier that will appear on all of your comments.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="InputDescription-root"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value=""
        />
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon MessageIcon-root"
        >
          warning
        </i>
        <span>
          This field is required.
        </span>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Username
    </button>
  </div>
</form>
`;

exports[`shows server error 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      Your username is an identifier that will appear on all of your comments.
    </div>
    <div
      className="CallOut-root CallOut-colorError CallOut-fullWidth"
    >
      <div
        className="CallOut-inner"
      >
        server error

GraphQL request:4:3
3 | ) {
4 |   setUsername(input: $input) {
  |   ^
5 |     user {
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="InputDescription-root"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorRegular"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value="hans"
        />
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Username
    </button>
  </div>
</form>
`;

exports[`successfully sets username 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      Your username is an identifier that will appear on all of your comments.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="InputDescription-root"
      >
        You may use “_” and “.” Spaces not permitted.
      </div>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorRegular"
          disabled={false}
          id="username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Username"
          type="text"
          value="hans"
        />
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Username
    </button>
  </div>
</form>
`;
